dataset1235/2025-2/2868285114/users/1560006455/executions/3649835072_1462915504.log
== RUN (2025-08-21 22:20:26)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))
apot = comp/2 * math.tan(math.pi/5)
a = (5/2) * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:18:28)
-- CODE: 
from math import *
comp = float(input("lado do pentagono: "))
apot = comp/2*math.tang(math.pi/5)
a = 5/2 * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:24:03)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))

a = (5/2) * comp * (comp/2 * ( math.tan(math.pi/5)))
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:19:10)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))
apot = comp/2*math.tang(math.pi/5)
a = 5/2 * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apot = comp/2*math.tang(math.pi/5)
                  ^^^^^^^^^
AttributeError: module 'math' has no attribute 'tang'. Did you mean: 'tan'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:19:32)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))
apot = comp/2*math.tan(math.pi/5)
a = 5/2 * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:25:50)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))
apot = comp/(2 * ( math.tan(math.pi/5)))
a = (5/2) * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:25:59)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))
apot = comp/(2 * ( math.tan(math.pi/5)))
a = (5/2) * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:23:45)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))

a = (5/2) * comp * (comp/2 * ( math.tan(math.pi/5)))
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:19:00)
-- CODE: 
import.math
comp = float(input("lado do pentagono: "))
apot = comp/2*math.tang(math.pi/5)
a = 5/2 * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 1
    import.math
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 22:21:48)
-- CODE: 
import math
comp = float(input("lado do pentagono: "))
apot = comp/2 * ( math.tan(math.pi/5))
a = (5/2) * comp * apot
print(round(a, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
lado do pentagono: 73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
lado do pentagono: 32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
lado do pentagono: 109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
lado do pentagono: 58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
lado do pentagono: 14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
lado do pentagono: 90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
